fix profile layout issue

--- a/app/assets/stylesheets/_profile.scss
+++ b/app/assets/stylesheets/_profile.scss
@@ -74,6 +74,7 @@
 
 .profile-avatar {
   label {
+    display: block;
     font-size: 100%;
     margin: 0 auto $small-spacing;
     position: relative;
